[package]
name = "rttp"
description = "RTTP: Sub-millisecond Neural Transport and Stateful Semantic Multicast Protocol [RFC-002]"
# Inheriting core protocol DNA from the imperial root workspace
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "http://rttp.com"
documentation = "https://github.com/Aicent-Stack/manifesto/blob/main/rfcs/RFC-002-RTTP-NERVES.md"
rust-version.workspace = true

# Keywords and categories for planetary-scale transport authority
keywords = ["neural-transport", "low-latency", "rfc-002", "pulse-frame", "multicast", "128-bit-atomic"]
categories = ["network-programming", "asynchronous", "embedded", "no-std", "systems"]

[dependencies]
# --- L0 Physical Transport Primitives ---
# RTTP acts as the agnostic foundational layer. It provides the "Pipes"
# while higher-order functions (RPKI/ZCMK) provide the "Soul."
# This decoupling is required to eliminate cyclic dependency deadlocks.

serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

# [PERF] Zero-copy buffer management and stack-allocated pulse fragments.
# These dependencies are the absolute baseline for 420µs sync targets.
bytes    = { workspace = true, features = ["serde"] }
smallvec = { workspace = true, features = ["serde"] }

# --- High-Performance Asynchronous Backbone ---
# Tokio features optimized for hardware-level network dispatch.
tokio = { workspace = true, features = ["net", "rt", "sync"] }

# Lock-free shunting and high-frequency inter-organ messaging.
# Ensures the neural spine remains non-blocking during planetary grid sync.
crossbeam         = { workspace = true } 
crossbeam-channel = { workspace = true }
crossbeam-queue   = { workspace = true }
once_cell         = { workspace = true } # Safe static initialization for manifolds
tracing           = { workspace = true } # Industrial-grade telemetry for audit trails

# --- Hardware Native Integration (Embodied Link) ---
# [RFC-005] Pre-configured for Embassy executor to support hard real-time motor loops.
embassy-executor = { workspace = true, optional = true }
embassy-time     = { workspace = true, optional = true }

[features]
# Standard implementation: Enables full feature-set for cloud-scale environments.
default = ["std"]

# [Standard v1.0] Standard library support for general-purpose compute.
# 🛡️ FIX: Explicitly excluded 'smallvec/std' to prevent compilation deadlock.
std = [
    "serde/std", 
    "anyhow/std", 
    "tokio/rt", 
    "tokio/sync",
    "bytes/std", 
    "tracing/std"
]

# [RFC-002] Feature flag for bare-metal/embedded hardware offloading (no_std).
# Essential for GTIOT robotics nodes and custom silicon ASICs.
embedded = ["embassy-executor", "embassy-time"]

# [RFC-002] Hook for future hardware-level acceleration (DPDK / RDMA / eBPF).
hardware-accelerated = []

[dev-dependencies]
# Performance benchmarking for validating sub-millisecond neural drift.
criterion = { workspace = true, features = ["async_tokio"] }
