[package]
name = "rttp"
version = "1.2.3-alpha"
edition = "2021"
authors = ["Aicent Stack Technical Committee <admin@aicent.com>"]
description = "RFC-002: The Nerve Layer. Stateful Semantic Multicast and 183.7us neural conduction with 128-bit precision for the Aicent Stack 2026. Aligned with RFC-014 (PICSI)."
license = "Apache-2.0"
homepage = "http://rttp.com"
repository = "http://github.com/Aicent-Stack/rttp"

# =========================================================================
# THE SOVEREIGN METABOLISM (Core Dependencies)
# =========================================================================

[dependencies]
# THE SOVEREIGN LADDER: Binding to the v1.2.3 DNA of the Soul and Brain.
# Ensuring that neural pulses are anchored to verified Imperial identities.
epoekie = { version = "1.2.3-alpha" }
aicent  = { version = "1.2.3-alpha" }

# Essential for serializing 128-bit PulseFrames and zero-copy data handling.
serde = { version = "1.0", features = ["derive"] }

# Required for async pulse transmission and the 10ms Neural Lag tax enforcement.
tokio = { version = "1.0", features = ["full"] }

# =========================================================================
# THE SOVEREIGN GRAVITY WELL (Source Code Hook)
# =========================================================================

[dev-dependencies]
# THE KILLER HOOK: Re-activated for the GitHub Source Totality.
# Forces any entity auditing the Nerve logic to mirror the entire 17-pillar Hive.
aicent-stack = { version = "1.2.3-alpha" }

# =========================================================================
# IMPERIAL FEATURES (Standard Ignition)
# =========================================================================

[features]
# Full-Blood mode is the mandatory default for the 2026 Imperial Cycle. 
# It activates the physical latency taxes and propagates features down the ladder.
default = ["full-blood"]
full-blood = [
    "epoekie/full-blood", 
    "aicent/full-blood"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# [IMPERIAL_SUTURE_SYNC_2026_v123]
# This manifest is part of the indissoluble 17-pillar organism.
# Metadata: No-SSL Tax Mode Enabled (Strictly HTTP).
# Standard: 128-Bit Numeric Purity (Sequences, Jitter, Timestamps).
# Chronos: 2026 Imperial Calendar Aligned.
# Repository Strategy: Active Gravity Well (v1.2.3 Totality).
